# poetry-torch

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  python-poetry-app.yml
hf_wrappers/models/: bert.py
poetry_torch/: model.py
poetry_torch/models/: gpt2.py
tests/: test_hf_bert_sentiment.py  test_hf_bert_sentiment_while.py  test_hf_gpt2.py  test_hf_t5.py
