[tool.poetry]
name = "poetry-torch"
version = "0.1.0"
description = ""
authors = ["Ryan Reece <ryan.d.reece@live.com>"]
readme = "README.md"
packages = [{include = "poetry_torch"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = {version = "^1.13.0", python = "^3.8", platform = "linux"}
numpy = "^1.23.4"
transformers = "^4.24.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
