[tool.poetry]
name = "poetry-torch"
version = "0.1.0"
description = ""
authors = ["Ryan Reece <ryan.d.reece@live.com>"]
readme = "README.md"
packages = [
    {include = "hf_wrappers", from="python"},
    {include = "poetry_torch", from="python"},
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pytest = "^7.2.0"
sentencepiece = "^0.1.97"
torch = {version = "^2.2.0", python = "^3.8", platform = "linux"}
transformers = "^4.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
